update install script
git-svn-id: https://showfps.googlecode.com/svn/trunk@4 9136b5f6-e04b-0410-9d36-417fb63e7919

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 PROJECT(showfps)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
-
-SUBDIRS(src/)
+SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 
 # OpenGL
 INCLUDE(FindOpenGL)
@@ -12,4 +11,10 @@ SET(FREETYPE_DIR ${CMAKE_MODULE_PATH})
 FIND_PACKAGE(FREETYPE REQUIRED)
 SET(CXXFLAGS "${LIBFREETYPE_CFLAGS}")
 
+CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/src/config.h.cmake ${CMAKE_BINARY_DIR}/src/config.h)
+
 INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR})
+
+SUBDIRS(src/)
+SUBDIRS(data)
+
