--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,17 @@
 PROJECT(showfps)
 
+INCLUDE(CPack)
+SET(CPACK_CMAKE_GENERATOR "Unix Makefiles")
+SET(CPACK_GENERATOR "TGZ")
+SET(CPACK_PACKAGE_NAME "showfps")
+SET(CPACK_PACKAGE_VERSION_MAJOR "0")
+SET(CPACK_PACKAGE_VERSION_MINOR "0")
+SET(CPACK_PACKAGE_VERSION_PATCH "1")
+SET(CPACK_SOURCE_GENERATOR "TGZ")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "cmake-0.0.1")
+SET(CPACK_SOURCE_IGNORE_FILES "~$" "*.bz2$" "*.gz$" "*/build/*")
+
+
 SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 
